parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instruction instructions
Rule 3     instructions -> <empty>
Rule 4     instruction -> SEMICOLON
Rule 5     expression -> INTEGER
Rule 6     expression -> FLOAT
Rule 7     expression -> matrix
Rule 8     expression -> STRING
Rule 9     expression -> bool
Rule 10    expression -> ID
Rule 11    expression -> LPAREN expression RPAREN
Rule 12    instruction -> LCURLY instructions RCURLY
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression DOTPLUS expression
Rule 18    expression -> expression DOTMINUS expression
Rule 19    expression -> expression DOTTIMES expression
Rule 20    expression -> expression DOTDIVIDE expression
Rule 21    bool -> expression LESSER expression
Rule 22    bool -> expression GREATER expression
Rule 23    bool -> expression LESSEREQUAL expression
Rule 24    bool -> expression GREATEREQUAL expression
Rule 25    bool -> expression NOTEQUAL expression
Rule 26    bool -> expression EQUAL expression
Rule 27    expression -> MINUS expression
Rule 28    matrix -> expression TRANS
Rule 29    instruction -> ID ASSIGN matrix SEMICOLON
Rule 30    matrix -> ZEROS LPAREN expression RPAREN
Rule 31    matrix -> ONES LPAREN expression RPAREN
Rule 32    matrix -> EYE LPAREN expression RPAREN
Rule 33    instruction -> ID ASSIGN expression SEMICOLON
Rule 34    instruction -> ID PLUSASSIGN expression SEMICOLON
Rule 35    instruction -> ID MINUSASSIGN expression SEMICOLON
Rule 36    instruction -> ID TIMESASSIGN expression SEMICOLON
Rule 37    instruction -> ID DIVIDEASSIGN expression SEMICOLON
Rule 38    instruction -> ID array ASSIGN expression SEMICOLON
Rule 39    instruction -> ID array PLUSASSIGN expression SEMICOLON
Rule 40    instruction -> ID array MINUSASSIGN expression SEMICOLON
Rule 41    instruction -> ID array TIMESASSIGN expression SEMICOLON
Rule 42    instruction -> ID array DIVIDEASSIGN expression SEMICOLON
Rule 43    instruction -> IF LPAREN expression RPAREN instruction
Rule 44    instruction -> IF LPAREN expression RPAREN instruction ELSE instruction
Rule 45    instruction -> WHILE LPAREN bool RPAREN instruction
Rule 46    instruction -> FOR ID ASSIGN expression RANGE expression instruction
Rule 47    instruction -> BREAK SEMICOLON
Rule 48    instruction -> CONTINUE SEMICOLON
Rule 49    instruction -> RETURN expression SEMICOLON
Rule 50    instruction -> PRINT list SEMICOLON
Rule 51    matrix -> LBRACET arraylist RBRACET
Rule 52    arraylist -> array
Rule 53    arraylist -> array COMMA arraylist
Rule 54    array -> LBRACET list RBRACET
Rule 55    list -> expression
Rule 56    list -> expression COMMA list
Rule 57    expression -> ID array

Terminals, with rules where they appear

ASSIGN               : 29 33 38 46
BREAK                : 47
COMMA                : 53 56
COMMENT              : 
CONTINUE             : 48
DIVIDE               : 16
DIVIDEASSIGN         : 37 42
DOTDIVIDE            : 20
DOTMINUS             : 18
DOTPLUS              : 17
DOTTIMES             : 19
ELSE                 : 44
EQUAL                : 26
EYE                  : 32
FLOAT                : 6
FOR                  : 46
GREATER              : 22
GREATEREQUAL         : 24
ID                   : 10 29 33 34 35 36 37 38 39 40 41 42 46 57
IF                   : 43 44
INTEGER              : 5
LBRACET              : 51 54
LCURLY               : 12
LESSER               : 21
LESSEREQUAL          : 23
LPAREN               : 11 30 31 32 43 44 45
MINUS                : 14 27
MINUSASSIGN          : 35 40
NOTEQUAL             : 25
ONES                 : 31
PLUS                 : 13
PLUSASSIGN           : 34 39
PRINT                : 50
RANGE                : 46
RBRACET              : 51 54
RCURLY               : 12
RETURN               : 49
RPAREN               : 11 30 31 32 43 44 45
SEMICOLON            : 4 29 33 34 35 36 37 38 39 40 41 42 47 48 49 50
STRING               : 8
TIMES                : 15
TIMESASSIGN          : 36 41
TRANS                : 28
WHILE                : 45
ZEROS                : 30
error                : 

Nonterminals, with rules where they appear

array                : 38 39 40 41 42 52 53 57
arraylist            : 51 53
bool                 : 9 45
expression           : 11 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 46 46 49 55 56
instruction          : 2 43 44 44 45 46
instructions         : 1 2 12
list                 : 50 54 56
matrix               : 7 29
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instruction instructions
    (3) instructions -> .
    (4) instruction -> . SEMICOLON
    (12) instruction -> . LCURLY instructions RCURLY
    (29) instruction -> . ID ASSIGN matrix SEMICOLON
    (33) instruction -> . ID ASSIGN expression SEMICOLON
    (34) instruction -> . ID PLUSASSIGN expression SEMICOLON
    (35) instruction -> . ID MINUSASSIGN expression SEMICOLON
    (36) instruction -> . ID TIMESASSIGN expression SEMICOLON
    (37) instruction -> . ID DIVIDEASSIGN expression SEMICOLON
    (38) instruction -> . ID array ASSIGN expression SEMICOLON
    (39) instruction -> . ID array PLUSASSIGN expression SEMICOLON
    (40) instruction -> . ID array MINUSASSIGN expression SEMICOLON
    (41) instruction -> . ID array TIMESASSIGN expression SEMICOLON
    (42) instruction -> . ID array DIVIDEASSIGN expression SEMICOLON
    (43) instruction -> . IF LPAREN expression RPAREN instruction
    (44) instruction -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (45) instruction -> . WHILE LPAREN bool RPAREN instruction
    (46) instruction -> . FOR ID ASSIGN expression RANGE expression instruction
    (47) instruction -> . BREAK SEMICOLON
    (48) instruction -> . CONTINUE SEMICOLON
    (49) instruction -> . RETURN expression SEMICOLON
    (50) instruction -> . PRINT list SEMICOLON

    $end            reduce using rule 3 (instructions -> .)
    SEMICOLON       shift and go to state 4
    LCURLY          shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .

    $end            reduce using rule 1 (program -> instructions .)


state 3

    (2) instructions -> instruction . instructions
    (2) instructions -> . instruction instructions
    (3) instructions -> .
    (4) instruction -> . SEMICOLON
    (12) instruction -> . LCURLY instructions RCURLY
    (29) instruction -> . ID ASSIGN matrix SEMICOLON
    (33) instruction -> . ID ASSIGN expression SEMICOLON
    (34) instruction -> . ID PLUSASSIGN expression SEMICOLON
    (35) instruction -> . ID MINUSASSIGN expression SEMICOLON
    (36) instruction -> . ID TIMESASSIGN expression SEMICOLON
    (37) instruction -> . ID DIVIDEASSIGN expression SEMICOLON
    (38) instruction -> . ID array ASSIGN expression SEMICOLON
    (39) instruction -> . ID array PLUSASSIGN expression SEMICOLON
    (40) instruction -> . ID array MINUSASSIGN expression SEMICOLON
    (41) instruction -> . ID array TIMESASSIGN expression SEMICOLON
    (42) instruction -> . ID array DIVIDEASSIGN expression SEMICOLON
    (43) instruction -> . IF LPAREN expression RPAREN instruction
    (44) instruction -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (45) instruction -> . WHILE LPAREN bool RPAREN instruction
    (46) instruction -> . FOR ID ASSIGN expression RANGE expression instruction
    (47) instruction -> . BREAK SEMICOLON
    (48) instruction -> . CONTINUE SEMICOLON
    (49) instruction -> . RETURN expression SEMICOLON
    (50) instruction -> . PRINT list SEMICOLON

    $end            reduce using rule 3 (instructions -> .)
    RCURLY          reduce using rule 3 (instructions -> .)
    SEMICOLON       shift and go to state 4
    LCURLY          shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13

    instruction                    shift and go to state 3
    instructions                   shift and go to state 14

state 4

    (4) instruction -> SEMICOLON .

    SEMICOLON       reduce using rule 4 (instruction -> SEMICOLON .)
    LCURLY          reduce using rule 4 (instruction -> SEMICOLON .)
    ID              reduce using rule 4 (instruction -> SEMICOLON .)
    IF              reduce using rule 4 (instruction -> SEMICOLON .)
    WHILE           reduce using rule 4 (instruction -> SEMICOLON .)
    FOR             reduce using rule 4 (instruction -> SEMICOLON .)
    BREAK           reduce using rule 4 (instruction -> SEMICOLON .)
    CONTINUE        reduce using rule 4 (instruction -> SEMICOLON .)
    RETURN          reduce using rule 4 (instruction -> SEMICOLON .)
    PRINT           reduce using rule 4 (instruction -> SEMICOLON .)
    $end            reduce using rule 4 (instruction -> SEMICOLON .)
    RCURLY          reduce using rule 4 (instruction -> SEMICOLON .)
    ELSE            reduce using rule 4 (instruction -> SEMICOLON .)


state 5

    (12) instruction -> LCURLY . instructions RCURLY
    (2) instructions -> . instruction instructions
    (3) instructions -> .
    (4) instruction -> . SEMICOLON
    (12) instruction -> . LCURLY instructions RCURLY
    (29) instruction -> . ID ASSIGN matrix SEMICOLON
    (33) instruction -> . ID ASSIGN expression SEMICOLON
    (34) instruction -> . ID PLUSASSIGN expression SEMICOLON
    (35) instruction -> . ID MINUSASSIGN expression SEMICOLON
    (36) instruction -> . ID TIMESASSIGN expression SEMICOLON
    (37) instruction -> . ID DIVIDEASSIGN expression SEMICOLON
    (38) instruction -> . ID array ASSIGN expression SEMICOLON
    (39) instruction -> . ID array PLUSASSIGN expression SEMICOLON
    (40) instruction -> . ID array MINUSASSIGN expression SEMICOLON
    (41) instruction -> . ID array TIMESASSIGN expression SEMICOLON
    (42) instruction -> . ID array DIVIDEASSIGN expression SEMICOLON
    (43) instruction -> . IF LPAREN expression RPAREN instruction
    (44) instruction -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (45) instruction -> . WHILE LPAREN bool RPAREN instruction
    (46) instruction -> . FOR ID ASSIGN expression RANGE expression instruction
    (47) instruction -> . BREAK SEMICOLON
    (48) instruction -> . CONTINUE SEMICOLON
    (49) instruction -> . RETURN expression SEMICOLON
    (50) instruction -> . PRINT list SEMICOLON

    RCURLY          reduce using rule 3 (instructions -> .)
    SEMICOLON       shift and go to state 4
    LCURLY          shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13

    instructions                   shift and go to state 15
    instruction                    shift and go to state 3

state 6

    (29) instruction -> ID . ASSIGN matrix SEMICOLON
    (33) instruction -> ID . ASSIGN expression SEMICOLON
    (34) instruction -> ID . PLUSASSIGN expression SEMICOLON
    (35) instruction -> ID . MINUSASSIGN expression SEMICOLON
    (36) instruction -> ID . TIMESASSIGN expression SEMICOLON
    (37) instruction -> ID . DIVIDEASSIGN expression SEMICOLON
    (38) instruction -> ID . array ASSIGN expression SEMICOLON
    (39) instruction -> ID . array PLUSASSIGN expression SEMICOLON
    (40) instruction -> ID . array MINUSASSIGN expression SEMICOLON
    (41) instruction -> ID . array TIMESASSIGN expression SEMICOLON
    (42) instruction -> ID . array DIVIDEASSIGN expression SEMICOLON
    (54) array -> . LBRACET list RBRACET

    ASSIGN          shift and go to state 16
    PLUSASSIGN      shift and go to state 17
    MINUSASSIGN     shift and go to state 18
    TIMESASSIGN     shift and go to state 19
    DIVIDEASSIGN    shift and go to state 20
    LBRACET         shift and go to state 22

    array                          shift and go to state 21

state 7

    (43) instruction -> IF . LPAREN expression RPAREN instruction
    (44) instruction -> IF . LPAREN expression RPAREN instruction ELSE instruction

    LPAREN          shift and go to state 23


state 8

    (45) instruction -> WHILE . LPAREN bool RPAREN instruction

    LPAREN          shift and go to state 24


state 9

    (46) instruction -> FOR . ID ASSIGN expression RANGE expression instruction

    ID              shift and go to state 25


state 10

    (47) instruction -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 26


state 11

    (48) instruction -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 27


state 12

    (49) instruction -> RETURN . expression SEMICOLON
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    expression                     shift and go to state 28
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 13

    (50) instruction -> PRINT . list SEMICOLON
    (55) list -> . expression
    (56) list -> . expression COMMA list
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    list                           shift and go to state 41
    expression                     shift and go to state 42
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 14

    (2) instructions -> instruction instructions .

    $end            reduce using rule 2 (instructions -> instruction instructions .)
    RCURLY          reduce using rule 2 (instructions -> instruction instructions .)


state 15

    (12) instruction -> LCURLY instructions . RCURLY

    RCURLY          shift and go to state 43


state 16

    (29) instruction -> ID ASSIGN . matrix SEMICOLON
    (33) instruction -> ID ASSIGN . expression SEMICOLON
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36

    matrix                         shift and go to state 44
    expression                     shift and go to state 45
    bool                           shift and go to state 33

state 17

    (34) instruction -> ID PLUSASSIGN . expression SEMICOLON
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    expression                     shift and go to state 46
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 18

    (35) instruction -> ID MINUSASSIGN . expression SEMICOLON
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    expression                     shift and go to state 47
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 19

    (36) instruction -> ID TIMESASSIGN . expression SEMICOLON
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    expression                     shift and go to state 48
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 20

    (37) instruction -> ID DIVIDEASSIGN . expression SEMICOLON
    (5) expression -> . INTEGER
    (6) expression -> . FLOAT
    (7) expression -> . matrix
    (8) expression -> . STRING
    (9) expression -> . bool
    (10) expression -> . ID
    (11) expression -> . LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression DOTPLUS expression
    (18) expression -> . expression DOTMINUS expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTDIVIDE expression
    (27) expression -> . MINUS expression
    (57) expression -> . ID array
    (28) matrix -> . expression TRANS
    (30) matrix -> . ZEROS LPAREN expression RPAREN
    (31) matrix -> . ONES LPAREN expression RPAREN
    (32) matrix -> . EYE LPAREN expression RPAREN
    (51) matrix -> . LBRACET arraylist RBRACET
    (21) bool -> . expression LESSER expression
    (22) bool -> . expression GREATER expression
    (23) bool -> . expression LESSEREQUAL expression
    (24) bool -> . expression GREATEREQUAL expression
    (25) bool -> . expression NOTEQUAL expression
    (26) bool -> . expression EQUAL expression

    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 32
    ID              shift and go to state 34
    LPAREN          shift and go to state 35
    MINUS           shift and go to state 36
    ZEROS           shift and go to state 37
    ONES            shift and go to state 38
    EYE             shift and go to state 39
    LBRACET         shift and go to state 40

    expression                     shift and go to state 49
    matrix                         shift and go to state 31
    bool                           shift and go to state 33

state 21

    (38) instruction -> ID array . ASSIGN expression SEMICOLON
    (39) instruction -> ID array . PLUSASSIGN expression SEMICOLON
    (40) instruction -> ID array . MINUSASSIGN expression SEMICOLON
